Fixed: wflow-consoleweb - Datalist - Header of sorted column is invisible. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/datalist8.css
+++ b/wflow-consoleweb/src/main/webapp/css/datalist8.css
@@ -34,7 +34,7 @@
     padding-right: 20px;
 }
 .dataList th.sorted a {
-    color:white;
+    opacity: 0.7;
 }
 .dataList th.sortable a {
     background-image:url("../images/v3/arrow_off.png");
